Upgrade all diagrams to modern Mermaid and Curved Unicode Box visualizations across 32 files